--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="theme-color" content="#3f23a9">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>project-colors</title>
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Montserrat:400,700" rel="stylesheet">
+    <title>Project Colors</title>
   </head>
   <body>
     <noscript>
